[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Worker_Male.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/Worker/Worker.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/bubble_frame.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 64.4032

[node name="Worker" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.8341, 1 )
shape = SubResource( 1 )

[node name="Worker_Male" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="BubbleBackground" type="NinePatchRect" parent="."]
visible = false
margin_left = -65.6696
margin_top = -111.3
margin_right = 54.3304
margin_bottom = -51.2996
rect_scale = Vector2( 1.04, 1.12 )
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleText" type="RichTextLabel" parent="."]
visible = false
margin_left = -60.0
margin_top = -105.0
margin_right = 60.0
margin_bottom = -45.0
rect_scale = Vector2( 1, 0.977162 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Alex, where is my coffee?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AngeringTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="AngeringTimer" to="." method="_on_AngeringTimer_timeout"]
